--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ hs_err_pid*
 replay_pid*
 /Semana 3/ListasDobles/nbproject/private/
 /Semana 3/ListasDobles/build/
+/Semana 4/ListasCirculares/nbproject/private/
+/Semana 4/ListasCirculares/build/
