--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,5 @@ replay_pid*
 /Semana 3/ListasDobles/build/
 /Semana 4/ListasCirculares/nbproject/private/
 /Semana 4/ListasCirculares/build/
+/Semana 4/Ejercicios/nbproject/private/
+/Semana 4/Ejercicios/build/
